[package]
name = "ethereum-events-observer"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["ws"] }
tokio = { version = "1.0", features = ["full", "macros"] }
eyre = "0.6"
hex = "0.4"
futures = "0.3"

# Optional but recommended dependencies for better development experience
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"  # For loading environment variables
